<resources>
    <string name="app_name">EasyEat</string>
    <string name="action_settings">Settings</string>

    <string name="text_favorites">Favorites</string>
    <string name="text_restaurants">Nearby</string>
    <string name="text_me">Me</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="network_error">Network not stable</string>
    <string name="no_favorites">No favorites now.</string>
    <string name="action_search">search</string>
    <string name="my_account">My Profile</string>
    <string name="food_order">My Takeout Order</string>
    <string name="my_reservation">My Reservation</string>
    <string name="reservation">Reservation</string>
    <string name="about_us">About us</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register_hint">Not member? Register here.</string>
    <string name="prompt_username">Name</string>
    <string name="prompt_address">Address (optional)</string>
    <string name="title_activity_register">Register</string>
    <string name="action_register">register</string>
    <string name="sign_in_hint">Already a member? Sign in here.</string>
    <string name="prompt_phone">Phone (optional)</string>
    <string name="action_save">save</string>
    <string name="title_activity_profile">My profile</string>
    <string name="direction">Direction</string>
    <string name="phone">Phone</string>
    <string name="take_out">Takeout order</string>
    <string name="review_menu">Menu</string>
    <string name="logout_hint">Logout? Here</string>
    <string name="prompt_private">Private table</string>
    <string name="action_reserve">Reserve</string>
    <string name="action_order">Order</string>
    <string name="title_menu">Menu</string>
    <string name="title_reservation">Reservation</string>
    <string name="title_take_out">Takeout Order</string>
    <string name="title_my_reservation">My Reservation</string>
    <string name="title_my_order">My Order</string>
    <string name="title_order_menu">My Order Detail</string>
    <string name="rl_my_payment">My Payment</string>
    <string name="prompt_card_number">Card number</string>
    <string name="prompt_name">Holder name</string>
    <string name="prompt_holder_address">Holder address</string>
    <string name="prompt_postcode">Zip code</string>
    <string name="prompt_ccv">Security code</string>
    <string name="error_card_number">Input card number</string>
    <string name="action_add">Add</string>
    <string name="delete">Delete</string>
    <string name="checkout">Checkout</string>
    <string name="title_add_bank">Add Card</string>
    <string name="title_bank_card">My Bank Card</string>
</resources>
