<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_restaurants"
        android:enabled="true"
        android:icon="@drawable/ic_location_city_white_24dp"
        android:title="@string/text_restaurants"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/text_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_me"
        android:enabled="true"
        android:icon="@drawable/ic_personal_white_24dp"
        android:title="@string/text_me"
        app:showAsAction="ifRoom" />
</menu>